# spinayarn

./: LICENSE.txt  README.md  pyproject.toml
examples/abandoned_ship/: abandoned_ship.hermes.2023.html  abandoned_ship.hermes.2023.json  abandoned_ship.hermes.2023.twee  abandoned_ship.yml
examples/hack_and_slash/: hack_and_slash.hermes.2023.html  hack_and_slash.hermes.2023.json  hack_and_slash.hermes.2023.twee  hack_and_slash.yml
examples/restaurant/: restaurant.hermes.2023.html  restaurant.hermes.2023.json  restaurant.hermes.2023.twee  restaurant.yml
notebooks/: 1. Generate with FakeLLM.ipynb  2_Generate_with_Nous_Hermes_and_LlamaCPP_GPU.ipynb  3. Story Graphs and Paths.ipynb
scripts/: install_llamacpp_python_cublas.sh
spinayarn/: __init__.py  chains.py  prompts.py  reader.py  spinayarn.py  utils.py  writer.py
spinayarn/data_models/: __init__.py  base.py  story.py
